--- a/src/Pages/endpointTable/EndpointTable.module.css
+++ b/src/Pages/endpointTable/EndpointTable.module.css
@@ -1,3 +1,16 @@
+.background {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: url('../../assets/darkmode.png');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .endpointOverview {
   padding: 2rem;
   max-width: 1000px;
