--- a/src/Pages/home/Home.module.css
+++ b/src/Pages/home/Home.module.css
@@ -1,9 +1,21 @@
+.background {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: url('../../assets/darkmode.png');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - 80px);
   padding: 2rem;
   text-align: center;
 }
@@ -13,13 +25,16 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 3rem;
+  margin-top: -5rem;
 }
 
 .logo {
   width: 50%;
   height: 50%;
   margin-bottom: 1.5rem;
+  -webkit-user-drag: none;
 }
+
 
 .title {
   font-size: 3rem;
