--- a/src/Pages/pokedex/Pokedex.module.css
+++ b/src/Pages/pokedex/Pokedex.module.css
@@ -16,8 +16,10 @@
     color: darkgoldenrod;
 }
 
-.pokedexContainer {
-  padding: 20px;
+.pokemonContainer{
+  display: grid;
+  grid-template-columns: 2fr 1fr; /* 2 equal columns */
+  gap: 10px;
 }
 
 .pokemonGrid {
@@ -27,13 +29,21 @@
   justify-content: flex-start;
 }
 
+.pokemonDetails{
+  background-color: silver;
+  overflow: scroll;
+  max-height: 600px;
+  border: 2px solid;
+  border-radius: 16px;
+  border-color: red;
+}
+
 .pokemonCard {
-  border: 2px solid #333;
-  border-radius: 8px;
+  border: 2px solid;
+  border-radius: 16px;
   border-color: red;
   padding: 15px;
   width: 200px;
-  max-height: 250px;
+  max-height: 200px;
   background-color: silver;
-  overflow: scroll;
 }
