--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 body {
   background-color: #292929;
 }
+
+.background {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: url('./assets/darkmode.png');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
