--- a/src/Pages/pokedex/Pokedex.module.css
+++ b/src/Pages/pokedex/Pokedex.module.css
@@ -1,12 +1,10 @@
 .background {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: auto;
+  padding: 20px;
   background-image: url('../../assets/darkmode.png');
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
