Added lightmode and darkmode button in buttom right corner, tried to make it save in sessionStorage, but only worked in localStorage for some reason

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,13 @@ html, body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+.background-light {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url('./assets/lightmode.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
