Styles to admin pages. Also to the add to Pokedex button, so it doesn't stick out that much

--- a/src/Pages/home/Home.module.css
+++ b/src/Pages/home/Home.module.css
@@ -35,6 +35,13 @@
   -webkit-user-drag: none;
 }
 
+/* Logo css der fiksker logo for Emil. Om det skal bruges idk
+.logo {
+  width: min(40vw, 350px); 
+  height: auto;
+  display: block;
+}
+*/
 
 .title {
   font-size: 3rem;
